<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 OpenFinna Organization. All rights reserved.
  ~ @author Developer From Jokela
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/etusivu" />

    <item
        android:id="@+id/navigation_reservations"
        android:icon="@drawable/ic_reservations"
        android:title="@string/reservations" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/booked_orders" />

    <item
        android:id="@+id/navigation_libinfo"
        android:icon="@drawable/ic_libraries"
        android:title="@string/libraries" />

    <item
        android:id="@+id/navigation_libcard"
        android:icon="@drawable/ic_library_card"
        android:title="@string/library_card" />

</menu>
