<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 OpenFinna Organization. All rights reserved.
  ~ @author Developer From Jokela
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_books"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account"
        android:title="@string/your_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info"
        android:title="@string/title_activity_about_screen"
        app:showAsAction="ifRoom" />
</menu>