<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 OpenFinna Organization. All rights reserved.
  ~ @author Developer From Jokela
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/cancel_disclaimer"
        android:textSize="18sp" />

    <include
        layout="@layout/book_hold"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/cancel_reservation"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancelConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:text="@string/cancel_reservation_full"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
